# server/src/modules/users/users.routes.ts
@@ -5,6 +5,7 @@ import { updateUserSchema } from '@bike-connect/shared';
 import * as usersController from './users.controller.js';
 import * as bikesController from '../bikes/bikes.controller.js';
 import * as ridesController from '../rides/rides.controller.js';
+import * as remindersController from '../reminders/reminders.controller.js';
 import { userFollowsRouter } from '../follows/follows.routes.js';
 
 export const usersRouter = Router();
@@ -12,6 +13,7 @@ export const usersRouter = Router();
 // /me MUST be before /:id to prevent "me" being treated as an id param
 usersRouter.patch('/me', requireAuth, validate(updateUserSchema, 'body'), usersController.updateMe);
 usersRouter.get('/me/ride-stats', requireAuth, ridesController.getMyMonthlyStats);
+usersRouter.get('/me/reminders', requireAuth, remindersController.getMyActiveReminders);
 usersRouter.get('/:id', usersController.getProfile);
 usersRouter.get('/:id/bikes', bikesController.listPublicByUser);
 usersRouter.get('/:id/activity', usersController.getActivity);
